test/fail/MPTCNoExtension.curry
module MPTCNoExtension where

class C a b

class D

instance C Bool Bool

instance D
